--- a/windows/Makefile.target
+++ b/windows/Makefile.target
@@ -65,5 +65,8 @@ S_WINDOWS := main.c window.c gui.c drawable.c misc.c plot.c findfile.c	\
 	  windbg.c system_colour.c
 S_WINDOWS := $(addprefix windows/,$(S_WINDOWS)) 
 
+# This is the final source build list
+# Note this is deliberately *not* expanded here as common and image
+#   are not yet available
 SOURCES := $(S_COMMON) $(S_IMAGE) $(S_BROWSER) $(S_WINDOWS) $(S_RESOURCES)
 EXETARGET := NetSurf.exe
