--- a/riscos/Makefile.target
+++ b/riscos/Makefile.target
@@ -86,8 +86,10 @@ TPL_RISCOS := de en fr nl # TODO: It'd be nice to auto-detect these
 TPL_RISCOS := $(addprefix riscos/templates/,$(TPL_RISCOS))
 
 
-# complete source file list
-SOURCES := $(S_COMMON) $(S_IMAGE) $(S_BROWSER) $(S_PDF) $(S_RISCOS)
+# This is the final source build list
+# Note this is deliberately *not* expanded here as common and image
+#   are not yet available
+SOURCES = $(S_COMMON) $(S_IMAGE) $(S_BROWSER) $(S_PDF) $(S_RISCOS)
 EXETARGET := !NetSurf/!RunImage$(EXEEXT)
 
 !NetSurf/!Run$(RUNEXT): riscos/scripts/Run $(EXETARGET)
