Fix build when using NETSURF_USE_ROSPRITE
svn path=/trunk/netsurf/; revision=12674

--- a/Makefile.sources
+++ b/Makefile.sources
@@ -43,7 +43,7 @@ S_IMAGE_$(NETSURF_USE_BMP) += bmp.c ico.c
 S_IMAGE_$(NETSURF_USE_GIF) += gif.c
 S_IMAGE_$(NETSURF_USE_JPEG) += jpeg.c
 S_IMAGE_$(NETSURF_USE_MNG) += mng.c
-S_IMAGE_$(NETSURF_USE_NSSPRITE) += nssprite.c
+S_IMAGE_$(NETSURF_USE_ROSPRITE) += nssprite.c
 S_IMAGE_$(NETSURF_USE_PNG) += png.c
 S_IMAGE_$(NETSURF_USE_NSSVG) += svg.c
 S_IMAGE_$(NETSURF_USE_RSVG) += rsvg.c
