--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -38,6 +38,7 @@ ifeq ($(HOST),amiga)
     EXETARGET := NetSurf
   endif
 else
+  $(eval $(call pkg_config_find_and_add,ROSPRITE,librosprite,Sprite))
   $(eval $(call pkg_config_find_and_add,BMP,libnsbmp,BMP))
   $(eval $(call pkg_config_find_and_add,GIF,libnsgif,GIF))
   $(eval $(call pkg_config_find_and_add,PNG,libpng,PNG))
