Sniff content types where appropriate. We never sniff for CSS, nor for non-page artefacts (e.g. treeview icons)
svn path=/trunk/netsurf/; revision=12707

--- a/Makefile.sources
+++ b/Makefile.sources
@@ -5,7 +5,7 @@
 #
 
 S_CONTENT := content.c content_factory.c dirlist.c fetch.c hlcache.c	\
-	llcache.c urldb.c
+	llcache.c mimesniff.c urldb.c
 
 S_FETCHERS := curl.c data.c file.c about.c resource.c
 
