Add Image cache and inegrate png and jpeg content handlers Current periodic cache clean algorithm is poor and requires replacing with something suitable (probably a segregated LRU) The speculative load algorithm is likewise poor and only uses the image size to make a decision.
svn path=/trunk/netsurf/; revision=12720

--- a/Makefile.sources
+++ b/Makefile.sources
@@ -37,7 +37,7 @@ S_COMMON := $(addprefix content/,$(S_CONTENT))				\
 	$(addprefix desktop/,$(S_DESKTOP))
 
 # S_IMAGE are sources related to image management
-S_IMAGE_YES := image.c
+S_IMAGE_YES := image.c image_cache.c
 S_IMAGE_NO :=
 S_IMAGE_$(NETSURF_USE_BMP) += bmp.c ico.c
 S_IMAGE_$(NETSURF_USE_GIF) += gif.c
