--- a/gtk/Makefile.target
+++ b/gtk/Makefile.target
@@ -29,11 +29,13 @@ $(eval $(call feature_enabled,WEBP,-DWITH_WEBP,-lwebp,WebP (libwebp)))
 GTKDEPFLAGS := -DG_DISABLE_SINGLE_INCLUDES \
 		-DG_DISABLE_DEPRECATED \
 	       	-DGTK_DISABLE_SINGLE_INCLUDES \
-		-DPANGO_DISABLE_DEPRECATED \
-	       	-DGDK_PIXBUF_DISABLE_DEPRECATED \
-		-DGDK_DISABLE_DEPRECATED \
 	       	-DGTK_DISABLE_DEPRECATED \
-		-DGTK_MULTIHEAD_SAFE 
+		-DGTK_MULTIHEAD_SAFE \
+		-DPANGO_DISABLE_DEPRECATED \
+	       	-DGDK_PIXBUF_DISABLE_DEPRECATED
+
+# libsexy currently means we cannot enable this
+#		-DGDK_DISABLE_DEPRECATED 
 
 GTKCFLAGS := -std=c99 -Dgtk -Dnsgtk \
 		$(GTKDEPFLAGS) \
