--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -1,13 +1,13 @@
 # ----------------------------------------------------------------------------
 # Atari target setup
 # ----------------------------------------------------------------------------
- 
+
 $(eval $(call feature_enabled,MNG,-DWITH_MNG,-lmng,PNG/MNG/JNG (libmng)))
 $(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)  ))
 
 CFLAGS += -DATARI_USE_FREETYPE $(shell freetype-config --cflags)
 LDFLAGS += -lcflib -lfreetype
- 
+
 # define additional CFLAGS and LDFLAGS requirements for pkg-configed libs here
 NETSURF_FEATURE_RSVG_CFLAGS := -DWITH_RSVG
 NETSURF_FEATURE_HUBBUB_CFLAGS := -DWITH_HUBBUB
@@ -17,7 +17,7 @@ NETSURF_FEATURE_GIF_CFLAGS := -DWITH_GIF
 #LDFLAGS += -lnsbmp -lnsgif
 $(eval $(call pkg_config_find_and_add,BMP,libnsbmp,BMP))
 $(eval $(call pkg_config_find_and_add,GIF,libnsgif,GIF))
- 
+
 CFLAGS += -U__STRICT_ANSI__ -std=c99 -I. -Dsmall $(WARNFLAGS) -Dnsatari \
 		-D_BSD_SOURCE \
 		-D_XOPEN_SOURCE=600 \
@@ -25,11 +25,11 @@ CFLAGS += -U__STRICT_ANSI__ -std=c99 -I. -Dsmall $(WARNFLAGS) -Dnsatari \
 		$(shell $(PKG_CONFIG) --cflags libhubbub libcss openssl) \
 		$(shell xml2-config --cflags) \
 		$(shell curl-config --cflags)
- 
-LDFLAGS += -lcurl  
-LDFLAGS += -lhubbub -lcss -lparserutils -lwapcaplet 
+
+LDFLAGS += -lcurl
+LDFLAGS += -lhubbub -lcss -lparserutils -lwapcaplet
 LDFLAGS += -lssl -lcrypto
-LDFLAGS += -lxml2 -lz -liconv -lHermes -lwindom -lgem -lm  
+LDFLAGS += -lxml2 -lz -liconv -lHermes -lwindom -lgem -lm
 
 
 # S_ATARI are sources purely for the Atari FreeMiNT build
@@ -39,7 +39,8 @@ S_ATARI := gui.c findfile.c filetype.c misc.c bitmap.c schedule.c \
 	plot.c plot/plotter.c plot/plotter_vdi.c plot/eddi.s \
 	plot/font_vdi.c plot/font_freetype.c plot/font_internal.c \
 	browser_win.c toolbar.c statusbar.c browser.c  \
-	global_evnt.c osspec.c dragdrop.c system_colour.c
+	global_evnt.c osspec.c dragdrop.c system_colour.c \
+	ctxmenu.c
 S_ATARI := $(addprefix atari/,$(S_ATARI))
 
 # This is the final source build list
