--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -33,9 +33,9 @@ ifeq ($(HOST),amiga)
   ifeq ($(NETSURF_AMIGA_USE_CAIRO),YES)
     CFLAGS += -DNS_AMIGA_CAIRO -I /SDK/local/common/include/cairo
     LDFLAGS += -use-dynld -ldl -lcairo -lpixman-1 -lfreetype -lfontconfig -lpng -lexpat
-    EXETARGET := NetSurf-Cairo
-  else
     EXETARGET := NetSurf
+  else
+    EXETARGET := NetSurf-Static
   endif
 else
   $(eval $(call pkg_config_find_and_add,ROSPRITE,librosprite,Sprite))
