--- a/Makefile.sources
+++ b/Makefile.sources
@@ -16,7 +16,7 @@ S_RENDER := box.c box_construct.c box_normalise.c			\
 	hubbub_binding.c imagemap.c layout.c list.c search.c table.c	\
 	textinput.c textplain.c
 
-S_UTILS := base64.c filename.c hashtable.c locale.c messages.c 		\
+S_UTILS := base64.c filename.c hashtable.c locale.c messages.c nsurl.c	\
 	talloc.c url.c utf8.c utils.c useragent.c filepath.c log.c
 
 S_HTTP := challenge.c generics.c primitives.c parameter.c		\
