Remove dead debugwin code.
svn path=/trunk/netsurf/; revision=13028

--- a/riscos/Makefile.target
+++ b/riscos/Makefile.target
@@ -65,7 +65,7 @@ endif
 
 # S_RISCOS are sources purely for the RISC OS build
 S_RISCOS := 401login.c assert.c bitmap.c buffer.c cookies.c configure.c	\
-	debugwin.c dialog.c download.c filetype.c font.c		\
+	dialog.c download.c filetype.c font.c				\
 	global_history.c gui.c help.c history.c hotlist.c iconbar.c	\
 	image.c menus.c message.c palettes.c plotters.c			\
 	print.c query.c save.c save_draw.c save_pdf.c schedule.c	\
