Beginnings of a gstreamer binding. I've been sitting on this for too long
svn path=/trunk/netsurf/; revision=13248

--- a/Makefile.sources
+++ b/Makefile.sources
@@ -48,6 +48,7 @@ S_IMAGE_$(NETSURF_USE_PNG) += png.c
 S_IMAGE_$(NETSURF_USE_NSSVG) += svg.c
 S_IMAGE_$(NETSURF_USE_RSVG) += rsvg.c
 S_IMAGE_$(NETSURF_USE_WEBP) += webp.c
+S_IMAGE_$(NETSURF_USE_VIDEO) += video.c
 
 S_IMAGE := $(addprefix image/,$(S_IMAGE_YES))
 
