--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -57,6 +57,10 @@ NETSURF_USE_MNG := YES
 # Valid options: YES, NO
 NETSURF_USE_WEBP := NO
 
+# Enable NetSurf's use of gstreamer for displaying videos
+# Valid options: YES, NO
+NETSURF_USE_VIDEO := NO
+
 # Enable NetSurf's use of libharu for PDF export and GTK printing support.
 # There is no auto-detection available for this, as it does not have a
 # pkg-config file.
