--- a/gtk/Makefile.target
+++ b/gtk/Makefile.target
@@ -71,7 +71,7 @@ endif
 
 # S_GTK are sources purely for the GTK build
 S_GTK := font_pango.c bitmap.c gui.c schedule.c thumbnail.c plotters.c	\
-	treeview.c scaffolding.c completion.c login.c throbber.c	\
+	treeview.c scaffolding.c gdk.c completion.c login.c throbber.c	\
 	selection.c history.c window.c filetype.c download.c menu.c	\
 	print.c save.c search.c tabs.c theme.c toolbar.c		\
 	sexy_icon_entry.c compat.c cookies.c hotlist.c system_colour.c	\
