--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -61,6 +61,10 @@ NETSURF_USE_WEBP := NO
 # Valid options: YES, NO
 NETSURF_USE_VIDEO := NO
 
+# Enable NetSurf's use of spidermonkey for javascript
+# Valid options: YES, NO
+NETSURF_USE_JS := NO
+
 # Enable NetSurf's use of libharu for PDF export and GTK printing support.
 # There is no auto-detection available for this, as it does not have a
 # pkg-config file.
