--- a/gtk/Makefile.target
+++ b/gtk/Makefile.target
@@ -14,6 +14,7 @@ NETSURF_FEATURE_GIF_CFLAGS := -DWITH_GIF
 NETSURF_FEATURE_PNG_CFLAGS := -DWITH_PNG
 NETSURF_FEATURE_WEBP_CFLAGS := -DWITH_WEBP
 NETSURF_FEATURE_VIDEO_CFLAGS := -DWITH_VIDEO
+NETSURF_FEATURE_JS_CFLAGS := -DWITH_JS -DJS_HAS_FILE_OBJECT=0
 
 # add a line similar to below for each optional pkg-configed lib here
 $(eval $(call pkg_config_find_and_add,RSVG,librsvg-2.0,SVG))
@@ -23,6 +24,7 @@ $(eval $(call pkg_config_find_and_add,BMP,libnsbmp,BMP))
 $(eval $(call pkg_config_find_and_add,GIF,libnsgif,GIF))
 $(eval $(call pkg_config_find_and_add,PNG,libpng,PNG  ))
 $(eval $(call pkg_config_find_and_add,VIDEO,gstreamer-0.10,Video))
+$(eval $(call pkg_config_find_and_add,JS,mozilla-js,Javascript))
 
 # no pkg-config for this library
 $(eval $(call feature_enabled,WEBP,-DWITH_WEBP,-lwebp,WebP (libwebp)))
