--- a/gtk/Makefile.target
+++ b/gtk/Makefile.target
@@ -24,7 +24,7 @@ $(eval $(call pkg_config_find_and_add,BMP,libnsbmp,BMP))
 $(eval $(call pkg_config_find_and_add,GIF,libnsgif,GIF))
 $(eval $(call pkg_config_find_and_add,PNG,libpng,PNG  ))
 $(eval $(call pkg_config_find_and_add,VIDEO,gstreamer-0.10,Video))
-$(eval $(call pkg_config_find_and_add,JS,mozilla-js,Javascript))
+$(eval $(call pkg_config_find_and_add,JS,mozilla-js,JavaScript))
 
 # no pkg-config for this library
 $(eval $(call feature_enabled,WEBP,-DWITH_WEBP,-lwebp,WebP (libwebp)))
