--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -5,7 +5,7 @@
 CFLAGS += -std=c99 -I . -Dnsamiga
 
 ifneq ($(SUBTARGET),os3)
-  CFLAGS += -N -U__STRICT_ANSI__ -D__USE_INLINE__ -D__USE_BASETYPE__
+  CFLAGS += -U__STRICT_ANSI__ -D__USE_INLINE__ -D__USE_BASETYPE__
 endif
 
 NETSURF_FEATURE_ROSPRITE_CFLAGS := -DWITH_NSSPRITE
