--- a/beos/Makefile.target
+++ b/beos/Makefile.target
@@ -84,18 +84,18 @@
 # ----------------------------------------------------------------------------
 
 # S_BEOS are sources purely for the BeOS build
-S_BEOS := beos_about.cpp beos_bitmap.cpp beos_fetch_rsrc.cpp		\
-	beos_filetype.cpp beos_font.cpp beos_gui.cpp beos_login.cpp	\
-	beos_options.cpp beos_plotters.cpp beos_save_complete.cpp	\
-	beos_scaffolding.cpp beos_search.cpp beos_schedule.cpp		\
-	beos_thumbnail.cpp beos_treeview.cpp beos_throbber.cpp		\
-	beos_window.cpp system_colour.cpp
+S_BEOS := about.cpp bitmap.cpp fetch_rsrc.cpp		\
+	filetype.cpp font.cpp gui.cpp login.cpp	\
+	gui_options.cpp plotters.cpp save_complete.cpp	\
+	scaffolding.cpp search.cpp schedule.cpp		\
+	thumbnail.cpp treeview.cpp throbber.cpp		\
+	window.cpp system_colour.cpp
 S_BEOS := $(addprefix beos/,$(S_BEOS))
 
-RDEF_BEOS := beos_res.rdef
+RDEF_BEOS := res.rdef
 RDEF_BEOS := $(addprefix beos/,$(RDEF_BEOS))
 
-RDEF_IMP_BEOS := beos_res_import.rdef
+RDEF_IMP_BEOS := res_import.rdef
 RDEF_IMP_BEOS := $(addprefix $(OBJROOT)/,$(subst /,_,$(RDEF_IMP_BEOS)))
 
 RDEP_BEOS := \
