initial move to libdom
svn path=/trunk/netsurf/; revision=13573

--- a/gtk/Makefile.target
+++ b/gtk/Makefile.target
@@ -2,7 +2,7 @@
 # GTK flag setup (using pkg-config)
 # ----------------------------------------------------------------------------
 
-LDFLAGS += $(shell $(PKG_CONFIG) --libs libxml-2.0 libcurl libhubbub libcss)
+LDFLAGS += $(shell $(PKG_CONFIG) --libs libxml-2.0 libcurl libdom libcss)
 LDFLAGS += $(shell $(PKG_CONFIG) --libs openssl)
 
 # define additional CFLAGS and LDFLAGS requirements for pkg-configed libs here
