Add libdom to native RISC OS LDFLAGS
svn path=/trunk/netsurf/; revision=13683

--- a/riscos/Makefile.target
+++ b/riscos/Makefile.target
@@ -6,7 +6,7 @@
 
 ifeq ($(HOST),riscos)
   LDFLAGS += -Xlinker -symbols=$(OBJROOT)/sym -lxml2 -lz -lm -lcurl -lcares
-  LDFLAGS += -lssl -lcrypto -lhubbub -lcss -lparserutils -lwapcaplet
+  LDFLAGS += -lssl -lcrypto -ldom -lhubbub -lcss -lparserutils -lwapcaplet
 else
   LDFLAGS += $(shell $(PKG_CONFIG) --libs libxml-2.0 libcares libcurl openssl)
   LDFLAGS += $(shell $(PKG_CONFIG) --libs libdom libcss)
