--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -3,6 +3,7 @@
 # ----------------------------------------------------------------------------
 
 $(eval $(call feature_enabled,MNG,-DWITH_MNG,-lmng,PNG/MNG/JNG (libmng)))
+$(eval $(call feature_enabled,GD_PLOTTER,-DWITH_GD_PLOTTER,-lgd,GD Plotter (libgd)  ))
 $(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)  ))
 
 CFLAGS += -DATARI_USE_FREETYPE $(shell freetype-config --cflags)
@@ -27,17 +28,20 @@ CFLAGS += -U__STRICT_ANSI__ -std=c99 -I. -Dsmall $(WARNFLAGS) -Dnsatari \
 		$(shell $(PKG_CONFIG) --cflags libcurl )
 
 LDFLAGS += -lcurl
-LDFLAGS += -lhubbub -lcss -lparserutils -lwapcaplet
+LDFLAGS += -lcss -lparserutils -ldom -lwapcaplet -lhubbub
 LDFLAGS += -lssl -lcrypto
-LDFLAGS += -lxml2 -lz -liconv -lHermes -lwindom -lgem -lm
+LDFLAGS += -lxml2 -lz -liconv -lcares -lHermes -lwindom -lgem -lm
 
 
 # S_ATARI are sources purely for the Atari FreeMiNT build
 S_ATARI := gui.c findfile.c filetype.c misc.c bitmap.c schedule.c \
 	download.c thumbnail.c login.c verify_ssl.c treeview.c hotlist.c history.c\
 	search.c font.c \
-	plot.c plot/plotter.c plot/plotter_vdi.c plot/eddi.s \
+	plot.c plot/plotter.c \
+	plot/plotter_vdi.c \
+	plot/plotter_gd.c \
 	plot/font_vdi.c plot/font_freetype.c plot/font_internal.c \
+	plot/eddi.s \
 	redrawslots.c encoding.c \
 	browser_win.c toolbar.c statusbar.c browser.c  \
 	global_evnt.c osspec.c dragdrop.c system_colour.c \
