--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -77,7 +77,7 @@ S_AMIGA := gui.c tree.c history.c hotlist.c schedule.c file.c	\
 	launch.c search.c history_local.c download.c iff_dr2d.c 	\
 	sslcert.c gui_options.c print.c	theme.c	drag.c icon.c system_colour.c \
 	datatypes.c dt_picture.c dt_anim.c dt_sound.c plugin_hack.c	\
-	stringview/stringview.c stringview/urlhistory.c
+	stringview/stringview.c stringview/urlhistory.c font_scan.c
 S_AMIGA := $(addprefix amiga/,$(S_AMIGA))
 
 # This is the final source build list
