improve javascript support
svn path=/trunk/netsurf/; revision=13962

--- a/Makefile.sources
+++ b/Makefile.sources
@@ -27,6 +27,13 @@ S_DESKTOP := cookies.c history_global_core.c hotlist.c knockout.c	\
 	scrollbar.c sslcert.c textarea.c thumbnail.c tree.c		\
 	tree_url_node.c version.c
 
+# Javascript sources
+ifeq ($(NETSURF_USE_JS),YES)
+S_JAVASCRIPT += js.c global.c
+else
+S_JAVASCRIPT += nojs.c
+endif
+
 # S_COMMON are sources common to all builds
 S_COMMON := $(addprefix content/,$(S_CONTENT))				\
 	$(addprefix content/fetchers/,$(S_FETCHERS))			\
@@ -34,7 +41,8 @@ S_COMMON := $(addprefix content/,$(S_CONTENT))				\
 	$(addprefix render/,$(S_RENDER))				\
 	$(addprefix utils/,$(S_UTILS))					\
 	$(addprefix utils/http/,$(S_HTTP))				\
-	$(addprefix desktop/,$(S_DESKTOP))
+	$(addprefix desktop/,$(S_DESKTOP))				\
+	$(addprefix javascript/,$(S_JAVASCRIPT))
 
 # S_IMAGE are sources related to image management
 S_IMAGE_YES := image.c image_cache.c
@@ -60,12 +68,6 @@ S_PDF := $(addprefix desktop/save_pdf/,$(S_PDF))
 # between RISC OS, GTK, BeOS and AmigaOS builds
 S_BROWSER := browser.c download.c frames.c history_core.c netsurf.c \
 	save_complete.c save_text.c selection.c textinput.c
-
-ifeq ($(NETSURF_USE_JS),YES)
-S_BROWSER += js.c
-else
-S_BROWSER += nojs.c
-endif
 
 S_BROWSER := $(addprefix desktop/,$(S_BROWSER))
 
