--- a/gtk/Makefile.target
+++ b/gtk/Makefile.target
@@ -15,6 +15,7 @@ NETSURF_FEATURE_PNG_CFLAGS := -DWITH_PNG
 NETSURF_FEATURE_WEBP_CFLAGS := -DWITH_WEBP
 NETSURF_FEATURE_VIDEO_CFLAGS := -DWITH_VIDEO
 NETSURF_FEATURE_JS_CFLAGS := -DWITH_JS -DJS_HAS_FILE_OBJECT=0
+NETSURF_FEATURE_MOZJS_CFLAGS := -DWITH_MOZJS -DJS_HAS_FILE_OBJECT=0
 
 # add a line similar to below for each optional pkg-configed lib here
 $(eval $(call pkg_config_find_and_add,RSVG,librsvg-2.0,SVG))
@@ -24,10 +25,15 @@ $(eval $(call pkg_config_find_and_add,BMP,libnsbmp,BMP))
 $(eval $(call pkg_config_find_and_add,GIF,libnsgif,GIF))
 $(eval $(call pkg_config_find_and_add,PNG,libpng,PNG  ))
 $(eval $(call pkg_config_find_and_add,VIDEO,gstreamer-0.10,Video))
+$(eval $(call pkg_config_find_and_add,MOZJS,mozjs185,JavaScript))
 $(eval $(call pkg_config_find_and_add,JS,mozilla-js,JavaScript))
 
 # no pkg-config for this library
 $(eval $(call feature_enabled,WEBP,-DWITH_WEBP,-lwebp,WebP (libwebp)))
+
+ifeq ($(NETSURF_USE_MOZJS),YES)
+NETSURF_USE_JS:=YES
+endif
 
 # GTK and GLIB flags to disable depricated usage
 GTKDEPFLAGS := -DG_DISABLE_SINGLE_INCLUDES \
