--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -25,6 +25,8 @@ ifeq ($(HOST),amiga)
   $(eval $(call feature_enabled,MNG,,-llcms -ljpeg,PNG/JNG/MNG (libmng)))
   $(eval $(call feature_enabled,WEBP,-DWITH_WEBP,-lwebp,WebP (libwebp)))
   $(eval $(call feature_enabled,VIDEO,-DWITH_VIDEO -I /SDK/local/newlib/include/glib-2.0,-lgstreamer-0.10 -lglib-2.0 -lgobject-2.0 -lgmodule-2.0 -lgthread-2.0 -lintl -lffi,Video (libgstreamer)))
+  $(eval $(call feature_enabled,JS,-DXP_UNIX -DWITH_JS -DJS_VERSION=185,-lstdc++ -lmozjs185,JavaScript))
+  $(eval $(call feature_enabled,MOZJS,-DXP_AMIGA -DWITH_MOZJS -DJS_VERSION=150 -DJSVERSION_LATEST=150 -DJSOPTION_JIT=0 -DJSCLASS_GLOBAL_FLAGS=0,-ljs_150 -lfdlibm,JavaScript))
   $(eval $(call feature_enabled,AMIGA_ICON,-DWITH_AMIGA_ICON,,Amiga icon))
   $(eval $(call feature_enabled,AMIGA_DATATYPES,-DWITH_AMIGA_DATATYPES,,DataTypes))
 
@@ -63,6 +65,10 @@ else
   endif
 
   EXETARGET := NetSurf
+endif
+
+ifeq ($(NETSURF_USE_MOZJS),YES)
+  NETSURF_USE_JS:=YES
 endif
 
 # ----------------------------------------------------------------------------
