--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -11,6 +11,7 @@ NETSURF_USE_JS:=YES
 NETSURF_USE_MOZJS:=YES
 endif
 
+# non-pkgconfig components
 $(eval $(call feature_enabled,MNG,-DWITH_MNG,-lmng,PNG/MNG/JNG (libmng)))
 $(eval $(call feature_enabled,GD_PLOTTER,-DWITH_GD_PLOTTER,-lgd,GD Plotter (libgd)))
 $(eval $(call feature_enabled,PNG,-DWITH_PNG,-lpng,PNG (libpng)))
