--- a/Makefile.sources
+++ b/Makefile.sources
@@ -12,7 +12,8 @@ S_FETCHERS := curl.c data.c file.c about.c resource.c
 S_CSS := css.c dump.c internal.c select.c utils.c
 
 S_RENDER := box.c box_construct.c box_normalise.c			\
-	font.c form.c html.c html_interaction.c html_redraw.c		\
+	font.c form.c							\
+	html.c html_script.c html_interaction.c html_redraw.c		\
 	libdom_binding.c imagemap.c layout.c list.c search.c table.c	\
 	textinput.c textplain.c
 
