--- a/atari/Makefile.target
+++ b/atari/Makefile.target
@@ -48,11 +48,8 @@ LDFLAGS += -lxml2 -lz -liconv -lcares -lHermes -lwindom -lgem -lm
 S_ATARI := gui.c findfile.c filetype.c misc.c bitmap.c schedule.c \
 	download.c thumbnail.c login.c verify_ssl.c treeview.c hotlist.c history.c\
 	search.c font.c \
-	plot.c plot/plotter.c \
-	plot/plotter_vdi.c \
-	plot/plotter_gd.c \
-	plot/font_vdi.c plot/font_freetype.c plot/font_internal.c \
-	plot/eddi.s \
+	plot/plot.c plot/fontplot.c plot/eddi.s \
+	plot/font_freetype.c plot/font_internal.c \
 	redrawslots.c encoding.c \
 	browser_win.c toolbar.c statusbar.c browser.c  \
 	global_evnt.c osspec.c dragdrop.c system_colour.c \
