Fix ignore of files in !NetSurf dir.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 *~
 gtk/res/toolbarIndices
 windows/res/preferences
-!NetSurf/!Run,feb
-!NetSurf/!RunImage,ff8
-!NetSurf/Resources/en/Templates,fec
-!NetSurf/Resources/fr/Templates,fec
-!NetSurf/Resources/de/Templates,fec
-!NetSurf/Resources/nl/Templates,fec
+\!NetSurf/!Run,feb
+\!NetSurf/!RunImage,ff8
+\!NetSurf/Resources/en/Templates,fec
+\!NetSurf/Resources/fr/Templates,fec
+\!NetSurf/Resources/de/Templates,fec
+\!NetSurf/Resources/nl/Templates,fec
 test/nsurl
 test/urldbtest
 test/llcache
