--- a/Makefile.sources
+++ b/Makefile.sources
@@ -13,12 +13,13 @@ S_CSS := css.c dump.c internal.c select.c utils.c
 
 S_RENDER := box.c box_construct.c box_normalise.c			\
 	font.c form.c							\
-	html.c html_script.c html_interaction.c html_redraw.c html_forms.c \
-	imagemap.c layout.c list.c search.c table.c	\
+	html.c html_script.c html_interaction.c html_redraw.c		\
+	html_forms.c imagemap.c layout.c list.c search.c table.c	\
 	textinput.c textplain.c
 
-S_UTILS := base64.c filename.c hashtable.c locale.c messages.c nsurl.c	\
-	talloc.c url.c utf8.c utils.c useragent.c filepath.c log.c
+S_UTILS := base64.c corestrings.c filename.c hashtable.c locale.c	\
+	messages.c nsurl.c talloc.c url.c utf8.c utils.c useragent.c	\
+	filepath.c log.c
 
 S_HTTP := challenge.c generics.c primitives.c parameter.c		\
 	content-disposition.c content-type.c www-authenticate.c
