--- a/Makefile.defaults
+++ b/Makefile.defaults
@@ -372,13 +372,19 @@ ifeq ($(TARGET),atari)
   NETSURF_USE_MNG := NO
 
   # enable true type fonts via freetype2
+  # Valid options: YES, NO
   NETSURF_USE_ATARI_FREETYPE_FONT := YES
 
   # Enable use of netsurf embedded font
+  # Valid options: YES, NO
   NETSURF_USE_ATARI_NETSURF_FONT := YES
 
+  # Configure support for screen drivers with no true colour mode
+  # Valid options: YES, NO
   NETSURF_USE_ATARI_8BPP_SUPPORT := NO
 
+  # Configure the CPU target
+  # Valid options: 68000, 68020-60, 5475 (coldfire)
   ATARI_ARCH = 68020-60
 
   # enable optimizations
