--- a/cocoa/Makefile.target
+++ b/cocoa/Makefile.target
@@ -5,7 +5,7 @@
   POSTEXES += NetSurf.app
 
   LDFLAGS += -L/usr/lib
-  LDFLAGS += $(shell $(PKG_CONFIG) --libs libxml-2.0 libhubbub libcss)
+  LDFLAGS += $(shell $(PKG_CONFIG) --libs libxml-2.0 libhubbub libcss libdom)
   LDFLAGS += -L/usr/X11/lib
   LDFLAGS += -lm -lxml2 -lcurl -liconv
   LDFLAGS += -lssl -lcrypto
@@ -16,7 +16,7 @@
 
   CFLAGS += -g -Os -Wno-uninitialized
 
-  CFLAGS += $(shell $(PKG_CONFIG) --cflags libxml-2.0 libhubbub libcss)
+  CFLAGS += $(shell $(PKG_CONFIG) --cflags libxml-2.0 libhubbub libcss libdom)
 
   # shut up zconf.h and zlib.h
   #CFLAGS += -D_LARGEFILE64_SOURCE=1
