--- a/amiga/Makefile.target
+++ b/amiga/Makefile.target
@@ -52,16 +52,16 @@ else
 
   CFLAGS += -I$(GCCSDK_INSTALL_ENV)/include
   CFLAGS += $(shell $(PKG_CONFIG) --cflags libxml-2.0 libcurl libcares openssl)
-  CFLAGS += $(shell $(PKG_CONFIG) --cflags tre libhubbub libcss)
+  CFLAGS += $(shell $(PKG_CONFIG) --cflags tre libdom libcss)
 
   LDFLAGS += $(shell $(PKG_CONFIG) --libs libxml-2.0 libcurl libcares openssl)
-  LDFLAGS += $(shell $(PKG_CONFIG) --libs tre libhubbub libcss)
+  LDFLAGS += $(shell $(PKG_CONFIG) --libs tre libdom libcss)
   LDFLAGS += -L$(GCCSDK_INSTALL_ENV)/lib
 
   ifeq ($(SUBTARGET),os3)
     LDFLAGS += -liconv
   else
-    LDFLAGS += -lauto
+    LDFLAGS += -lauto -lpbl
   endif
 
   EXETARGET := NetSurf
