fixup jsapi dom interface to include correct html/dom acessor hierachy

--- a/Makefile.sources
+++ b/Makefile.sources
@@ -31,7 +31,7 @@ S_DESKTOP := cookies.c history_global_core.c hotlist.c knockout.c	\
 
 # Javascript sources
 ifeq ($(NETSURF_USE_JS),YES)
-S_JSAPI = window.c document.c navigator.c console.c element.c
+S_JSAPI = window.c navigator.c console.c htmldocument.c htmlelement.c
 S_JAVASCRIPT += content.c jsapi.c $(addprefix jsapi/,$(S_JSAPI))
 else
 S_JAVASCRIPT += none.c
