--- a/riscos/Makefile.target
+++ b/riscos/Makefile.target
@@ -100,3 +100,17 @@ clean-run:
 	$(VQ)echo "   CLEAN: !NetSurf/!Run$(RUNEXT)"
 	$(Q) $(RM) !NetSurf/!Run$(RUNEXT)
 CLEANS += clean-run
+
+# ----------------------------------------------------------------------------
+# Install target
+# ----------------------------------------------------------------------------
+
+install-riscos: netsurf.zip
+
+netsurf.zip: $(EXETARGET)
+	TMPDIR:=$(shell mktemp -d)
+	$(Q) $(RM) $@
+	rsync --archive --verbose $(CURDIR)/!NetSurf $(TMPDIR)
+	mv $(TMPDIR)/!NetSurf/ReadMe $(TMPDIR)
+	$(shell cd $(TMPDIR) &&	/opt/netsurf/arm-unknown-riscos/env/bin/zip -9vr, $(CURDIR)/$@ *)
+	$(Q) $(RM) $(TMPDIR)
